--- a/docs/EXAMPLE/cluster_defs/gcp/cluster_vars__cloud.yml
+++ b/docs/EXAMPLE/cluster_defs/gcp/cluster_vars__cloud.yml
@@ -4,7 +4,7 @@
 ssh_whitelist: ['10.0.0.0/8']
 
 ## Source images from which to clone.  Set these as variables so they can be selected on command line (for automated testing).
-#_ubuntu2004image: "projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20210820"   #europe-west4 20.04 amd64 20210820.  Ubuntu images can be located at https://cloud-images.ubuntu.com/locator/
+#_ubuntu2004image: "projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20210820"   # europe-west4 20.04 amd64 20210820.  Ubuntu images can be located at https://cloud-images.ubuntu.com/locator/
 _ubuntu2404image: "projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-*"            # Latest Ubuntu Noble Numbat (22.04.x) image
 _ubuntu2204image: "projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-*"            # Latest Ubuntu Jammy Jellyfish (22.04.x) image
 _ubuntu2004image: "projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-*"            # Latest Ubuntu Focal Fossa (20.04.x) image
@@ -16,7 +16,7 @@ _alma8image: "projects/almalinux-cloud/global/images/almalinux-8-*"             
 cluster_vars:
   image: "{{_ubuntu2404image}}"
   dns_cloud_internal_domain: "c.{{ (_gcp_service_account_contents | string | from_json).project_id }}.internal"    # The cloud-internal zone as defined by the cloud provider (e.g. GCP, AWS)
-  dns_nameserver_zone: ""                                                                                         # The apex zone that dns_server will operate on.  gcloud dns needs a trailing '.'.  Leave blank if no external DNS (use IPs only)
+  dns_nameserver_zone: ""                                     # The apex zone that dns_server will operate on.  gcloud dns needs a trailing '.'.  Leave blank if no external DNS (use IPs only)
   dns_subdomain: "{{cloud_type}}-{{region}}.{{buildenv}}"     # A user-defined subdomain part of the FDQN, (e.g. if more labels are required before the dns_nameserver_zone)
   dns_server: "clouddns"                                      # Specify DNS server. nsupdate, route53 or clouddns.  If empty string is specified, no DNS will be added.
   assign_public_ip: "dynamic"                                 # Whether a 'dynamic' (will change on stop/start), 'static' (e.g. elastic IP), or no public IP should be assigned.
@@ -24,7 +24,7 @@ cluster_vars:
   ip_forward: "false"
   metadata:
     #The ssh key is either provided on the command line (as 'ansible_ssh_private_key_file'), or as a variable in cluster_vars[buildenv].ssh_connection_cfg.host.ansible_ssh_private_key_contents (anchored to _host_ssh_connection_cfg.ansible_ssh_private_key_contents); we can slurp the key from either variable, and then ssh-keygen it into the public key (we have to remove the comment though before we add our own, (hence the regex), because this is what gcp expects).
-    ssh-keys: "{%- if _host_ssh_connection_cfg.ansible_ssh_private_key_contents is defined -%}{{ _host_ssh_connection_cfg.ansible_user }}:{{ lookup('pipe', 'ssh-keygen -y -f /dev/stdin <<SSHFILE\n' + _host_ssh_connection_cfg.ansible_ssh_private_key_contents|string + '\nSSHFILE') | regex_replace('([\\S]+ [\\S]+)(?:.*$)?', '\\1') }} {{ _host_ssh_connection_cfg.ansible_user }}{%- else -%}{{ ansible_facts.cliargs.remote_user }}:{{ lookup('pipe', 'ssh-keygen -y -f ' + ansible_ssh_private_key_file) | regex_replace('([\\S]+ [\\S]+)(?:.*$)?', '\\1') }} {{ cliargs.remote_user }}{%- endif -%}"
+    ssh-keys: "{%- if _host_ssh_connection_cfg.ansible_ssh_private_key_contents -%}{{ _host_ssh_connection_cfg.ansible_user }}:{{ lookup('pipe', 'ssh-keygen -y -f /dev/stdin <<SSHFILE\n' + _host_ssh_connection_cfg.ansible_ssh_private_key_contents | replace('\\n','\n') + '\nSSHFILE') | regex_replace('([\\S]+ [\\S]+)(?:.*$)?', '\\1') }} {{ _host_ssh_connection_cfg.ansible_user }}{%- else -%}{{ ansible_facts.cliargs.remote_user }}:{{ lookup('pipe', 'ssh-keygen -y -f ' + ansible_ssh_private_key_file) | regex_replace('([\\S]+ [\\S]+)(?:.*$)?', '\\1') }} {{ cliargs.remote_user }}{%- endif -%}"
     startup-script: "{%- if ssh_whitelist is defined and ssh_whitelist | length > 0 -%}#! /bin/bash\n\n#Whitelist my inbound IPs\n[ -f /etc/sshguard/whitelist ] && echo \"{{ssh_whitelist | join ('\n')}}\" >>/etc/sshguard/whitelist && /bin/systemctl restart sshguard{%- endif -%}"
     user-data: ""
   network_fw_tags: ["{{cluster_name}}-nwtag"]
