Updates for Ansible v13 (ansible-core 2.20).
+ merge_vars.py.  Can no longer use ansible.utils.update_fact to parse the literal updates, because this is deprecated (https://github.com/ansible/ansible/pull/85673/files)
  + Remove the 'replace' option - its behaviour was misleading
  + Remove mentions of 'facts' from the module - it does not operate on host facts, but on host *variables*, which are of lower precendece (deliberately, so they can be overridden)
  + There is also a breaking change that, when using the `self._task.action = 'include_vars'` spoof, variables returned in 'ansible_facts' from an action plugin are no longer populated in the 'ansible_facts' variable.  We need to perform the merge differently because of this.
    + We need to pre-seed *only the variables we're going to add* from task_vars (which contains *all variables*).
    + Improve the module so that variable files merge recursively with previous variables.
+ Updates for INJECT_FACTS_AS_VARS deprecation (https://github.com/ansible/ansible/pull/85323)
  + change `ansible_os_family` to `ansible_facts['os_family']`
  + change `ansible_default_ipv4` to `ansible_facts.default_ipv4`
+ fix get_cluster_hosts_state_libvirt.yml logic - not good, and not compatible with v13

--- a/roles/_dependencies/tasks/main.yml
+++ b/roles/_dependencies/tasks/main.yml
@@ -12,21 +12,20 @@
   block:
     - name: Derive cluster definitions by merging tiered configuration files
       merge_vars:
-        from: "{{ merge_dict_vars_list }}"
+        files: "{{ merge_dict_vars_list }}"
         ignore_missing_files: true
-        replace: true
 
     - name: Ensure the mandatory cluster_vars are defined
       merge_vars:
-        facts: "{{ cluster_vars__mandatory | ansible.utils.to_paths(prepend='cluster_vars') | dict2items(key_name='path', value_name='value') }}"
+        literals: "{{ cluster_vars__mandatory | ansible.utils.to_paths(prepend='cluster_vars') | dict2items(key_name='path', value_name='value') }}"
 
     - name: Gather CLI facts
       cli_facts:
 
     - name: debug ansible_facts.argv (original)
-      debug: msg={{ (ansible_facts.argv[1:]) }}
+      debug: msg={{ ansible_facts.argv }}
 
-    - name: debug ansible_facts.argv. If an argv tuple value starts with '{', or contains '={', surround the braces with single quotes to preserve as dict when re-parsed
+    - name: debug argv. If an argv tuple value starts with '{', or contains '={', surround the braces with single quotes to preserve as dict when re-parsed
       debug:
         msg: "{{ (ansible_facts.argv[1:] | map('regex_replace', '(^|=)(\\{.*\\})$', \"\\1'\\2'\" ) | join(' ')) }}"
 
@@ -42,10 +41,10 @@
 
     - name: Combine command-line cluster_vars_override into the loaded cluster_vars
       merge_vars:
-        facts: "{{ cluster_vars_override | from_yaml | dict2items(key_name='path', value_name='value') | to_json | from_json | json_query(\"[].{path: join('.', ['cluster_vars', path]), value: value}\") }}"
+        literals: "{{ cluster_vars_override | from_yaml | dict2items(key_name='path', value_name='value') | to_json | from_json | json_query(\"[].{path: join('.', ['cluster_vars', path]), value: value}\") }}"
       when: cluster_vars is defined and cluster_vars_override is defined and cluster_vars_override != ''
 
-    - name: Loaded/derived/overridden cluster_vars
+    - name: debug Combine command-line cluster_vars_override into the loaded cluster_vars
       debug: msg="{{cluster_vars}}"
 
 - name: Get AWS STS credentials (if required) for all hosts (but only run on localhost as we cannot run ansible tasks on the remote hosts)
@@ -63,7 +62,7 @@
 
     - name: update cluster_vars[buildenv].aws_access_key and cluster_vars[buildenv].aws_secret_key
       merge_vars:
-        facts:
+        literals:
           - path: "cluster_vars.{{buildenv}}.aws_access_key"
             value: "{{r__sts_assume_role.sts_creds.access_key}}"
           - path: "cluster_vars.{{buildenv}}.aws_secret_key"
