--- a/roles/config/tasks/chrony.yml
+++ b/roles/config/tasks/chrony.yml
@@ -6,26 +6,26 @@
     name: chrony
     update_cache: true
     state: present
-  when: ansible_os_family == "Debian"
+  when: ansible_facts['os_family'] == "Debian"
 
 - name: config/chrony | CentOS install
   become: true
   yum:
     name: chrony
     state: present
-  when: ansible_os_family == "RedHat"
+  when: ansible_facts['os_family'] == "RedHat"
 
 - name: config/chrony | Configure Chrony
   become: true
   copy:
-    dest: "/etc/{% if ansible_os_family == 'Debian'%}chrony/{% endif %}chrony.conf"
+    dest: "/etc/{% if ansible_facts['os_family'] == 'Debian'%}chrony/{% endif %}chrony.conf"
     backup: true
     content: |-
       {% for ntp_server in chrony_ntp_servers %}
       server {{ ntp_server }}
       {% endfor %}
       
-      {% if ansible_os_family == 'RedHat' %}
+      {% if ansible_facts['os_family'] == 'RedHat' %}
       keyfile /etc/chrony.keys
       {% else %}
       keyfile /etc/chrony/chrony.keys
