--- a/roles/config/tasks/disks_auto_generic.yml
+++ b/roles/config/tasks/disks_auto_generic.yml
@@ -69,14 +69,14 @@
       apt:
         update_cache: true
         name: "lvm2"
-      when: ansible_os_family == 'Debian'
+      when: ansible_facts['os_family'] == 'Debian'
 
     - name: disks_auto_cloud/lvm | Install logical volume management tooling. (yum - RedHat/CentOS)
       become: true
       yum:
         name: "lvm*"
         state: present
-      when: ansible_os_family == 'RedHat'
+      when: ansible_facts['os_family'] == 'RedHat'
 
     - block:
         - name: config/disks_auto_generic/lvm | raid_vols_devices
