--- a/roles/_dependencies/tasks/main.yml
+++ b/roles/_dependencies/tasks/main.yml
@@ -2,10 +2,10 @@
 
 - name: Preflight assertions (early)
   block:
-    - name: preflight | Ansible version requirements
+    - name: preflight_early | Ansible version requirements
       assert: { that: "(ansible_version.full is version('2.17.4', '>='))", fail_msg: "Ansible core >= 2.17.4 (pypi >= 10.4.0) is required." }
 
-    - name: preflight | merge_dict_vars_list must be defined
+    - name: preflight_early | merge_dict_vars_list must be defined
       assert: { that: "(merge_dict_vars_list is defined and merge_dict_vars_list | length > 0)", fail_msg: "merge_dict_vars_list must be defined" }
 
 - name: Load cluster definitions
@@ -47,6 +47,26 @@
     - name: debug Combine command-line cluster_vars_override into the loaded cluster_vars
       debug: msg="{{cluster_vars}}"
 
+- name: Copy SSH private keys to localhost
+  block:
+    - name: "Copy ansible_ssh_private_key_file"
+      copy:
+        content: '{{ cluster_vars[buildenv].ssh_connection_cfg.host.ansible_ssh_private_key_contents | regex_replace("\\n", "\n") }}'
+        dest: "id_rsa_ansible_ssh_private_key_file"
+        mode: "0600"
+      delegate_to: localhost
+      when: "cluster_vars[buildenv].ssh_connection_cfg.host.ansible_ssh_private_key_contents is defined"
+      no_log: true
+
+    - name: "Copy bastion sshkey"
+      copy:
+        content: '{{ cluster_vars[buildenv].ssh_connection_cfg.bastion.ssh_priv_key | regex_replace("\\n", "\n") }}'
+        dest: "id_rsa_bastion"
+        mode: "0600"
+      delegate_to: localhost
+      when: "cluster_vars[buildenv].ssh_connection_cfg.bastion.ssh_priv_key is defined"
+      no_log: true
+
 - name: Get AWS STS credentials (if required) for all hosts (but only run on localhost as we cannot run ansible tasks on the remote hosts)
   block:
     - assert: { that: "cluster_vars[buildenv].aws_secret_key is not defined or cluster_vars[buildenv].aws_secret_key == ''", fail_msg: "aws_secret_key ({{cluster_vars[buildenv].aws_secret_key | default(None)}}) and aws_sts_assume_role_arn ({{cluster_vars[buildenv].aws_sts_assume_role_arn | default(None)}}) cannot both be set." }
@@ -80,15 +100,15 @@
 
 - name: Preflight assertions (late - based on loaded vars)
   block:
-    - name: preflight | assertions based on required collections
+    - name: preflight_late | assertions based on required collections
       block:
-        - name: preflight | libvirt collection requirements
+        - name: preflight_late | libvirt collection requirements
           block:
             - assert: { that: "'dseeley.libvirt' in galaxy_collections", fail_msg: "Please ensure the dseeley.libvirt collection is installed: ansible-galaxy collection install dseeley.libvirt or ansible-galaxy collection install -r requirements.yml" }
             - assert: { that: "'dseeley.inventory_lookup' in galaxy_collections", fail_msg: "Please ensure the dseeley.inventory_lookup collection is installed: ansible-galaxy collection install dseeley.inventory_lookup or ansible-galaxy collection install -r requirements.yml" }
           when: cluster_vars.cloud_type == "libvirt"
 
-        - name: preflight | esxifree collection requirements
+        - name: preflight_late | esxifree collection requirements
           assert: { that: "'dseeley.esxifree_guest' in galaxy_collections", fail_msg: "Please ensure the dseeley.esxifree_guest collection is installed:  ansible-galaxy collection install dseeley.esxifree_guest (or ansible-galaxy collection install -r requirements.yml)" }
           when: cluster_vars.cloud_type == "esxifree"
       vars:
@@ -98,14 +118,11 @@
     - assert: { that: "cluster_suffix is regex('^[a-z\\d\\-_]{0,63}$')", fail_msg: "Please ensure cluster_suffix ({{cluster_suffix}}) is in the set[a-z\\d\\-_], and <63 characters long." }
       when: cluster_suffix is defined
 
-    - name: debug cluster_vars.custom_tagslabels
+    - name: preflight_late | debug cluster_vars.custom_tagslabels
       debug: msg={{cluster_vars.custom_tagslabels}}
 
-    - assert:
-        that: invalid_tags | length == 0
-        fail_msg: "Please ensure all cluster_vars.custom_tagslabels are in the set [a-z\\d\\-_], and <63 characters long. Failed on: {{ invalid_tags }}"
-      vars:
-        invalid_tags: "{{ cluster_vars.custom_tagslabels | dict2items | rejectattr('value', 'match', '^[a-z\\d\\-_]{0,63}$') | items2dict  }}"
+    - assert: { that: invalid_tags | length == 0, fail_msg: "Please ensure all cluster_vars.custom_tagslabels are in the set [a-z\\d\\-_], and <63 characters long. Failed on: {{ invalid_tags }}"}
+      vars: { invalid_tags: "{{ cluster_vars.custom_tagslabels | dict2items | rejectattr('value', 'match', '^[a-z\\d\\-_]{0,63}$') | items2dict  }}" }
       when: "'custom_tagslabels' in cluster_vars"
 
     - assert: { that: "(cluster_vars[buildenv].hosttype_vars | json_query('*.version') | map('regex_search', '^[a-z\\d\\-_]{0,63}$') | select('ne', None) | length) == (cluster_vars[buildenv].hosttype_vars | json_query('*.version') | length)", fail_msg: "Please ensure cluster_vars[{{buildenv}}].hosttype_vars[<hosttype>].version is in the set [a-z\\d\\-_], and <63 characters long." }
@@ -119,7 +136,7 @@
     - assert: { that: "cluster_vars.dns_nameserver_zone is regex('.*\\.$')", fail_msg: "For GCP, ensure cluster_vars.dns_nameserver_zone ({{cluster_vars.dns_nameserver_zone}}) has a '.' at the end." }
       when: cluster_vars.cloud_type == "gcp"
 
-    - name: Validate volume mountpoints
+    - name: preflight_late | Validate volume mountpoints
       ansible.builtin.assert:
         that: problematic_volume_mountpoints in [none, '']
         fail_msg: "All non-root volume mountpoints must either be all different (in which case 'lvmparams' must not be set), or all the same (in which case, 'lvmparams' must be set). [Failure: {{ problematic_volume_mountpoints | default('null') }}]"
