--- a/roles/cluster_hosts/tasks/get_cluster_hosts_state_azure.yml
+++ b/roles/cluster_hosts/tasks/get_cluster_hosts_state_azure.yml
@@ -8,7 +8,7 @@
 - name: get_cluster_hosts_state/azure | Get existing instance info
   azure.azcollection.azure_rm_virtualmachine_info:
     client_id: "{{cluster_vars[buildenv].azure_client_id | default(omit) }}"
-    secret: "{{cluster_vars[buildenv].azure_secret | default(omit) }}}}"
+    secret: "{{cluster_vars[buildenv].azure_secret | default(omit) }}"
     subscription_id: "{{cluster_vars[buildenv].azure_subscription_id | default(omit) }}"
     tenant: "{{cluster_vars[buildenv].azure_tenant | default(omit) }}"
     resource_group: "{{cluster_vars[buildenv].azure_resource_group}}"
@@ -26,7 +26,7 @@
 - name: get_cluster_hosts_state/azure | Get network interface info (per instance)
   azure.azcollection.azure_rm_networkinterface_info:
     client_id: "{{cluster_vars[buildenv].azure_client_id | default(omit) }}"
-    secret: "{{cluster_vars[buildenv].azure_secret | default(omit) }}}}"
+    secret: "{{cluster_vars[buildenv].azure_secret | default(omit) }}"
     subscription_id: "{{cluster_vars[buildenv].azure_subscription_id | default(omit) }}"
     tenant: "{{cluster_vars[buildenv].azure_tenant | default(omit) }}"
     resource_group: "{{cluster_vars[buildenv].azure_resource_group}}"
@@ -57,7 +57,7 @@
 - name: get_cluster_hosts_state/azure | Get publicipaddress info (per instance)
   azure.azcollection.azure_rm_publicipaddress_info:
     client_id: "{{cluster_vars[buildenv].azure_client_id | default(omit) }}"
-    secret: "{{cluster_vars[buildenv].azure_secret | default(omit) }}}}"
+    secret: "{{cluster_vars[buildenv].azure_secret | default(omit) }}"
     subscription_id: "{{cluster_vars[buildenv].azure_subscription_id | default(omit) }}"
     tenant: "{{cluster_vars[buildenv].azure_tenant | default(omit) }}"
     resource_group: "{{cluster_vars[buildenv].azure_resource_group}}"
