--- a/roles/redeploy/__common/tasks/powerchange_vms_azure.yml
+++ b/roles/redeploy/__common/tasks/powerchange_vms_azure.yml
@@ -8,7 +8,7 @@
     - name: "powerchange_vms/azure | {{powerchange_new_state}} VMs asynchronously"
       azure.azcollection.azure_rm_virtualmachine:
         client_id: "{{cluster_vars[buildenv].azure_client_id | default(omit) }}"
-        secret: "{{cluster_vars[buildenv].azure_secret | default(omit) }}}}"
+        secret: "{{cluster_vars[buildenv].azure_secret | default(omit) }}"
         subscription_id: "{{cluster_vars[buildenv].azure_subscription_id | default(omit) }}"
         tenant: "{{cluster_vars[buildenv].azure_tenant | default(omit) }}"
         resource_group: "{{cluster_vars[buildenv].azure_resource_group}}"
