--- a/docs/EXAMPLE/cluster_defs/libvirt/cluster_vars__cloud.yml
+++ b/docs/EXAMPLE/cluster_defs/libvirt/cluster_vars__cloud.yml
@@ -22,13 +22,13 @@ cluster_vars:
   libvirt:
     hypervisor: "192.168.1.3"
     username: "svc"
-    private_key: ""
+    private_key: "{{ lookup('env', 'LIBVIRT_PRIVATE_KEY_CONTENTS') | default ('') }}"    # NOTE: This can either be sourced from environment (LIBVIRT_PRIVATE_KEY_CONTENTS), or defined inline here (perhaps vaulted).
     storage_pool: "default"
     delete_cloudinit: true
     cloudinit_userdata:
       users:
         - name: ansible
-          ssh_authorized_keys: ['ssh-rsa AAAAXXXXXX==']
+          ssh_authorized_keys: [ "{{ lookup('pipe', \"printf '%b' \" ~ (lookup('env', 'ANSIBLE_SSH_PRIVATE_KEY_CONTENTS') | quote) ~ \" | ssh-keygen -y -P '' -f /dev/stdin\") | trim }}" ]
           sudo: "ALL=(ALL) NOPASSWD:ALL"
           lock_passwd: false
           shell: /bin/bash
